@@ -1,14 +1,18 @@
 package no.fellesstudentsystem.schema_transformer.schema;
 
-import graphql.language.*;
 import graphql.schema.idl.SchemaParser;
 import graphql.schema.idl.TypeDefinitionRegistry;
-import no.fellesstudentsystem.schema_transformer.schema.rewrites.AsConnectionRewriter;
+import no.fellesstudentsystem.schema_transformer.transform.FeatureFlagConfiguration;
+import no.sikt.graphql.schema.SchemaReadingHelper;
 
-import java.util.ArrayList;
-import java.util.Collection;
+import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -18,61 +22,61 @@ import static no.sikt.graphql.schema.SchemaReadingHelper.readSchemas;
  * Class for reading schema files from disk.
  */
 public class SchemaReader {
+    private static final String SCHEMA_FILE_SUFFIX = ".graphql", SCHEMA_FILE_SUFFIX2 = ".graphqls";
+
     public static TypeDefinitionRegistry getTypeDefinitionRegistry(List<String> schemas) {
         // https://github.com/kobylynskyi/graphql-java-codegen/blob/master/src/main/java/com/kobylynskyi/graphql/codegen/parser/GraphQLDocumentParser.java
-        var typeDefinitionRegistry = new SchemaParser().buildRegistry(readSchemas(schemas));
-        mergeExtensionsToObjects(typeDefinitionRegistry);
-        AsConnectionRewriter.rewrite(typeDefinitionRegistry);
-        return typeDefinitionRegistry;
+        return new SchemaParser().buildRegistry(readSchemas(schemas));
     }
 
-    /**
-     * Create new types for objects and inputs where any extensions are included within the new types.
-     */
-    private static void mergeExtensionsToObjects(TypeDefinitionRegistry typeDefinitionRegistry) {
-        var typesMap = typeDefinitionRegistry.getTypesMap(ObjectTypeDefinition.class);
-        var inputsMap = typeDefinitionRegistry.getTypesMap(InputObjectTypeDefinition.class);
-
-        var objExtensionsMap = typeDefinitionRegistry.objectTypeExtensions();
-        var inExtensionsMap = typeDefinitionRegistry.inputObjectTypeExtensions();
-
-        var objectsWithExtensionsList = Stream
-                .concat(
-                        new ArrayList<>(typesMap.values()).stream().filter(it -> !objExtensionsMap.containsKey(it.getName())),
-                        objExtensionsMap.entrySet().stream().map(it -> extendObject(it, typesMap.get(it.getKey())))
-                )
+    public static List<String> findSchemaFilesRecursivelyInDirectory(Set<String> schemaRootPaths) {
+        var allFiles = schemaRootPaths
+                .stream()
+                .map(Path::of)
+                .map(SchemaReader::findSchemaFilesRecursivelyInDirectory)
+                .flatMap(List::stream)
+                .sorted()
                 .toList();
-        var inputsWithExtensionsList = Stream
-                .concat(
-                        new ArrayList<>(inputsMap.values()).stream().filter(it -> !inExtensionsMap.containsKey(it.getName())),
-                        inExtensionsMap.entrySet().stream().map(it -> extendInput(it, inputsMap.get(it.getKey())))
-                )
-                .toList();
-
-        objectsWithExtensionsList.forEach(it -> typeDefinitionRegistry.remove(typesMap.get(it.getName())));
-        objExtensionsMap.values().stream().flatMap(Collection::stream).toList().forEach(typeDefinitionRegistry::remove); // NOTE: Must collect to list to avoid concurrency issues.
-        objectsWithExtensionsList.forEach(typeDefinitionRegistry::add);
-
-        inputsWithExtensionsList.forEach(it -> typeDefinitionRegistry.remove(inputsMap.get(it.getName())));
-        inExtensionsMap.values().stream().flatMap(Collection::stream).toList().forEach(typeDefinitionRegistry::remove);
-        inputsWithExtensionsList.forEach(typeDefinitionRegistry::add);
+        return Stream.concat(
+                allFiles.stream().filter(it -> !it.contains(FeatureFlagConfiguration.FEATURES_DIRECTORY)),
+                allFiles.stream().filter(it -> it.contains(FeatureFlagConfiguration.FEATURES_DIRECTORY))
+        ).collect(Collectors.toList());
     }
 
-    private static ObjectTypeDefinition extendObject(Map.Entry<String, List<ObjectTypeExtensionDefinition>> extension, ObjectTypeDefinition object) {
-        var newFields = extension.getValue().stream().flatMap(ext -> ext.getFieldDefinitions().stream());
-        return object.transform(builder ->
-                builder.fieldDefinitions(
-                        Stream.concat(object.getFieldDefinitions().stream(), newFields).collect(Collectors.toList())
-                )
-        );
+    private static List<String> findSchemaFilesRecursivelyInDirectory(Path schemaRootPath) {
+        try (Stream<Path> walk = Files.walk(schemaRootPath)) {
+            return walk
+                    .map(Path::toFile)
+                    .filter(file -> file.getName().endsWith(SCHEMA_FILE_SUFFIX) || file.getName().endsWith(SCHEMA_FILE_SUFFIX2))
+                    .map(File::getPath)
+                    .toList();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
     }
 
-    private static InputObjectTypeDefinition extendInput(Map.Entry<String, List<InputObjectTypeExtensionDefinition>> extension, InputObjectTypeDefinition object) {
-        var newFields = extension.getValue().stream().flatMap(ext -> ext.getInputValueDefinitions().stream());
-        return object.transform(builder ->
-                builder.inputValueDefinitions(
-                        Stream.concat(object.getInputValueDefinitions().stream(), newFields).collect(Collectors.toList())
-                )
-        );
+    public static Map<String, String> createDescriptionSuffixForFeatureMap(Set<String> schemaRootPaths, String descriptionSuffixFilename) {
+        return schemaRootPaths.stream()
+                .map(it -> createDescriptionSuffixForFeatureMap(Path.of(it), descriptionSuffixFilename))
+                .flatMap(map -> map.entrySet().stream())
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+    }
+
+    private static Map<String, String> createDescriptionSuffixForFeatureMap(Path schemaRootPath, String descriptionSuffixFilename) {
+        if (!schemaRootPath.toFile().exists()) {
+            return new HashMap<>();
+        }
+        try (Stream<Path> walk = Files.walk(schemaRootPath)) {
+            return walk
+                    .filter(it -> it.toFile().getName().equals(descriptionSuffixFilename))
+                    .collect(Collectors.toMap(
+                            it -> {
+                                String parentPath = it.getParent().getFileName().toString();
+                                return parentPath.substring(parentPath.lastIndexOf("/") + 1);
+                            }, SchemaReadingHelper::fileAsString)
+                    );
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
     }
 }
